from abc import abstractmethod
from datetime import datetime
from decimal import Decimal
from typing import Optional
from uuid import UUID

from order.domain.entities.order import OrderDTO


class OrderDAO:
    @abstractmethod
    def add_order(
        self,
        client_id: UUID,
        symbol: str,
        order_type: str,
        order_style: str,
        order_duration: str,
        quantity: int,
        idempotency_key: UUID,
        end_date: Optional[datetime],
        price: Optional[Decimal] = None,
    ) -> OrderDTO:
        pass

    @abstractmethod
    def find_matching_orders(
        self, email: str, symbol: str, direction: str, quantity: int
    ) -> list[OrderDTO]:
        pass

    @abstractmethod
    def get_orders_by_client(self, client_id: UUID) -> list[OrderDTO]:
        pass

    @abstractmethod
    def delete_order(self, client_id: UUID, order_id: UUID) -> OrderDTO:
        pass

    @abstractmethod
    def delete_order_rollback(
        self, client_id: UUID, order_id: UUID, previous_status: str
    ) -> None:
        pass

    @abstractmethod
    def get_potential_matches(self, order) -> list[OrderDTO]:
        pass

    @abstractmethod
    def execute_order(self, order, matching_orders: list[OrderDTO]) -> dict:
        pass
