@startuml
left to right direction
skinparam style strictuml
skinparam ActorStyle awesome
skinparam rectangle {
  BackgroundColor #FFFFFF
  BorderColor #000000
  RoundCorner 15
}
package "Domain" {
    package "Entities" {
        [Order]
    }

    package "Ports" {
        interface OrderRepository
        interface PortfolioRepository
        interface StockRepository
        interface WalletRepository

        package "Dao" {
            interface OrderDAO
        }
    }


}

package "Views" {
    [OrderView]
}

package "Adapters" {
    [DjangoOrderRepository]
    [PortfolioService]
    [StockService]
    [WalletService]

    package "DAO" {
        [MySQLOrderDAO]
    }

    package "Redis" {
        [RedisOrder]
    }

    package "Kafka" {
        [OrderCreatedHandler]
        [OrderEventProducer]
    }
}

package "Services" {
    [OrderMatchingUseCase]
    [PlaceOrderUseCase]
}

[OrderView] --> [PlaceOrderUseCase]
[PlaceOrderUseCase] --> [DjangoOrderRepository]
[PlaceOrderUseCase] --> [WalletService]: Reserve funds
[PlaceOrderUseCase] --> [StockService]: Update top of book
[StockService] --> [PlaceOrderUseCase]: Get top of book
[PlaceOrderUseCase] --> [PortfolioService]: Reserve holdings
[PlaceOrderUseCase] --> [OrderEventProducer]: Produce "EventCreated" event

[PlaceOrderUseCase] --> [Order]
[DjangoOrderRepository] --> [Order]
[DjangoOrderRepository] --> [RedisOrder]: cache order information
[DjangoOrderRepository] --> [MySQLOrderDAO]: store order information

[StockService] --|> [StockRepository]
[WalletService] --|> [WalletRepository]
[PortfolioService] --|> [PortfolioRepository]
[DjangoOrderRepository] --|> [OrderRepository]
[MySQLOrderDAO] --|> [OrderDAO]

[OrderMatchingUseCase] --> [DjangoOrderRepository]
[OrderMatchingUseCase] --> [OrderEventProducer]: Produce "OrderExecuted" event
[OrderMatchingUseCase] --> [OrderCreatedHandler]: Handle "OrderCreated" event


@enduml